[package]
name = "ton-address"
version = "0.1.0"
edition = "2021"
description = "A simple library for working with addresses on The Open Network (TON)."
license = "Apache-2.0"
repository = "https://github.com/RichardWGNR/ton-address"

[dependencies]
base64 = { version = "0.22.1" }
crc = { version = "3.2.1" }
thiserror = { version = "1.0.62" }
hex = { version = "0.4.3" }